Bug 20344 - [4.0/4.1 regression] gnat1: error: unrecognized command line option "-fRTS=/tmp/rts"
Summary: [4.0/4.1 regression] gnat1: error: unrecognized command line option "-fRTS=/t...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Eric Botcazou
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-06 11:43 UTC by berndtrog
Modified: 2005-03-17 15:10 UTC (History)
1 user (show)

See Also:
Host: i686-gnu-linux
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-03-06 11:54:08


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description berndtrog 2005-03-06 11:43:12 UTC
$ gnatmake  --RTS=/tmp/rts test1.adb
gcc -c --RTS=/tmp/rts test1.adb
gnat1: error: unrecognized command line option "-fRTS=/tmp/rts"  

Note: This works for 4.0.0-20041123 and fails for 4.0.0-20041129 and newer.
Comment 1 Eric Botcazou 2005-03-06 11:54:08 UTC
Confirmed, worked only by accident.
Comment 2 Eric Botcazou 2005-03-06 11:55:02 UTC
It should be fixed by the next push from AdaCore.
Comment 3 Eric Botcazou 2005-03-06 11:56:55 UTC
The change comes from:

2004-11-28  Matt Kraai  <kraai@alumni.cmu.edu>

	PR diagnostic/17594
	* opts.c (find_opt): Require that the input match a switch exactly
	or that the switch take a joined option to be interpreted as a
	match for another language.
Comment 4 GCC Commits 2005-03-15 16:03:15 UTC
Subject: Bug 20344

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	charlet@gcc.gnu.org	2005-03-15 16:02:28

Modified files:
	gcc/ada        : misc.c lang.opt 

Log message:
	2005-03-08  Pascal Obry  <obry@adacore.com>
	Eric Botcazou  <ebotcazou@adacore.com>
	
	PR ada/20226
	PR ada/20344
	
	* init.c (__gnat_initialize): Do not call __gnat_install_SEH_handler()
	when IN_RTS. This is to work around a bootstrap path problem.
	
	* misc.c (gnat_parse_file): Create a SEH (Structured Exception Handler)
	table and pass it to __gnat_install_SEH_handler().
	(gnat_handle_option): Accept OPT_fRTS_, not OPT_fRTS.
	
	* lang.opt: Fix specification of -fRTS=.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/misc.c.diff?cvsroot=gcc&r1=1.97&r2=1.98
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/lang.opt.diff?cvsroot=gcc&r1=1.8&r2=1.9

Comment 5 Arnaud Charlet 2005-03-15 16:09:05 UTC
Fixed on mainline.
Comment 6 Arnaud Charlet 2005-03-15 16:11:25 UTC
Marking as fixed.
Comment 7 GCC Commits 2005-03-17 15:08:23 UTC
Subject: Bug 20344

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-4_0-branch
Changes by:	ebotcazou@gcc.gnu.org	2005-03-17 15:06:49

Modified files:
	gcc/ada        : ChangeLog lang.opt misc.c 

Log message:
	PR ada/20344
	Backport from mainline:
	
	Eric Botcazou  <ebotcazou@adacore.com>
	* lang.opt: Fix specification of -fRTS=.
	* misc.c (gnat_handle_option): Accept OPT_fRTS_, not OPT_fRTS.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.638.4.3&r2=1.638.4.4
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/lang.opt.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.8&r2=1.8.62.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/misc.c.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.96&r2=1.96.6.1

Comment 8 Eric Botcazou 2005-03-17 15:10:29 UTC
Fixed in 4.0.0.