re PR ada/20344 (gnat1: error: unrecognized command line option "-fRTS=/tmp/rts")

PR ada/20344
	Backport from mainline:

	Eric Botcazou  <ebotcazou@adacore.com>
	* lang.opt: Fix specification of -fRTS=.
	* misc.c (gnat_handle_option): Accept OPT_fRTS_, not OPT_fRTS.

From-SVN: r96612